--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.3.1",
     "react-infinite-scroller": "^1.2.4",
+    "react-map-gl": "^5.2.7",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
