--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.3.1",
     "react-infinite-scroller": "^1.2.4",
-    "react-map-gl": "^5.2.7",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
@@ -21,10 +20,11 @@
   },
   "scripts": {
     "start": "yarn watch:css && react-scripts start",
+    "watch:css": "postcss src/css/tailwind.css -o src/css/main.css",
     "build": "yarn build:css && react-scripts build",
-    "test": "react-scripts test",
     "build:css": "postcss src/css/tailwind.css -o src/css/main.css",
-    "watch:css": "postcss src/css/tailwind.css -o src/css/main.css"
+    "test": "react-scripts test",
+    "deploy": "yarn build && netlify deploy --prod --dir=build"
   },
   "eslintConfig": {
     "extends": "react-app"
